--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,13 @@
 {
-    "extends": [
-      "config:base"
-    ]
-  }
+  "extends": [
+    "config:base",
+    ":assignee(arska)"
+  ],
+  "packageRules": [
+    {
+      "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
+      "automerge": true
+    }
+  ]
+  
+}
